--- a/lab05/CENG241_Lab_05.tex
+++ b/lab05/CENG241_Lab_05.tex
@@ -217,7 +217,7 @@ The required duty cycle of 50\% and frequency of a few hertz were obtained from 
 \[
        Duty\\\ cycle=\frac { { R }_{ a }+{ R }_{ b } }{ { R }_{ a }+2{ R }_{ b } } 
 \]
-the expected clock frequency and duty cycle was 7.2Hz and 50\% respectfully. Figure \ref{fig:timer} shows the experimental frequency of 8.2Hz with a duty cycle of 54.08\%. Resistance and capacitance in the leads may account for these discrepancies. 
+the expected clock frequency and duty cycle was calculated to be 7.2Hz and 50\% respectfully. Figure \ref{fig:timer} shows the experimental frequency of 8.2Hz with a duty cycle of 54.08\%. Resistance and capacitance in the leads may account for these discrepancies. 
 
 
 \begin{figure}[htpb]
