fix input sequence spacing
it’s more readable this way

--- a/lab06/CENG241_lab_06.tex
+++ b/lab06/CENG241_lab_06.tex
@@ -372,8 +372,8 @@ A01 - B03\\[1.5cm]
 \begin{table}[htpb]
 	\centering
 	\begin{tabular}{l c}
-		Input & 1001101101001101 \\
-		Output & 0000001001000001 \\
+		Input & 1001\;1011\;0100\;1101 \\
+		Output & 0000\;0010\;0100\;0001 \\
 	\end{tabular}
 \end{table}
 
