--- a/lab06/CENG241_lab_06.tex
+++ b/lab06/CENG241_lab_06.tex
@@ -337,7 +337,7 @@ Grace \textsc{Hui}
 
 
 % Lab members
-\Large Yves \textsc{Senechal}
+\Large Yves \textsc{S\'{e}n\'{e}chal}
 \large V00213837	\\
 \Large Tyler \textsc{Stephen}
 \large V00812021	\\
